plugins {
    // Minecraft 26.1+ is unobfuscated, so this is the new non-remapping Loom.
    id 'net.fabricmc.fabric-loom' version '1.15-SNAPSHOT'
    id 'java'
}

// ---------------------------------------------------------------------------
// Birch Optimizer — a Hypixel Skyblock QOL mod for Minecraft 26.1.2 (Fabric).
//
// NOTE: Minecraft 26.1+ requires Java 25 as the minimum Gradle JVM.
// ---------------------------------------------------------------------------

version = project.mod_version
group = project.maven_group

base {
    archivesName = project.archives_base_name
}

repositories {
    mavenCentral()
    maven { url = 'https://maven.fabricmc.net/' }
}

dependencies {
    // Minecraft 26.1+ ships unobfuscated with official Mojang names, so there
    // is no `mappings` line and no remapping step.
    minecraft "com.mojang:minecraft:${project.minecraft_version}"

    // Plain `implementation` (not `modImplementation`) — Loom no longer remaps.
    implementation "net.fabricmc:fabric-loader:${project.loader_version}"
    implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
}

processResources {
    inputs.property 'version', project.version

    filesMatching('fabric.mod.json') {
        expand 'version': project.version,
                'minecraft_version': project.minecraft_version,
                'loader_version': project.loader_version
    }
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
    withSourcesJar()
}

tasks.withType(JavaCompile).configureEach {
    it.options.release = 25
    it.options.encoding = 'UTF-8'
}
